crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__assignments-4.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(r#\"a[\"b\"] = c;\"#)"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 11,
                    },
                },
                span: 0..11,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 10,
                            },
                        },
                        span: 0..10,
                        kind: Assign(
                            Assign {
                                left: Expr {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 6,
                                        },
                                    },
                                    span: 0..6,
                                    kind: Member(
                                        Member {
                                            obj: Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 1,
                                                    },
                                                },
                                                span: 0..1,
                                                kind: Ident(
                                                    Ident {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 0,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 1,
                                                            },
                                                        },
                                                        span: 0..1,
                                                        name: "a",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                            prop: Computed(
                                                ComputedPropName {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 2,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 5,
                                                        },
                                                    },
                                                    span: 2..5,
                                                    expr: Expr {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 2,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 5,
                                                            },
                                                        },
                                                        span: 2..5,
                                                        kind: Lit(
                                                            Str(
                                                                Str {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 2,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 5,
                                                                        },
                                                                    },
                                                                    span: 2..5,
                                                                    value: "b",
                                                                },
                                                            ),
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                },
                                            ),
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                right: Expr {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 9,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 10,
                                        },
                                    },
                                    span: 9..10,
                                    kind: Ident(
                                        Ident {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 9,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 10,
                                                },
                                            },
                                            span: 9..10,
                                            name: "c",
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                op: Eq,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
