crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__async_await-2.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"let foo = async () => { await 10 };\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 35,
                    },
                },
                span: 0..35,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 7,
                                },
                            },
                            span: 4..7,
                            kind: Ident(
                                BindingIdent {
                                    name: "foo",
                                    mutable: false,
                                    span: 4..7,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 7,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 34,
                                    },
                                },
                                span: 10..34,
                                kind: Lambda(
                                    Lambda {
                                        params: [],
                                        body: Block(
                                            Block {
                                                span: 22..34,
                                                stmts: [
                                                    Statement {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 24,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 32,
                                                            },
                                                        },
                                                        span: 24..32,
                                                        kind: ExprStmt(
                                                            Expr {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 24,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 32,
                                                                    },
                                                                },
                                                                span: 24..32,
                                                                kind: Await(
                                                                    Await {
                                                                        expr: Expr {
                                                                            loc: SourceLocation {
                                                                                start: Position {
                                                                                    line: 0,
                                                                                    column: 30,
                                                                                },
                                                                                end: Position {
                                                                                    line: 0,
                                                                                    column: 32,
                                                                                },
                                                                            },
                                                                            span: 30..32,
                                                                            kind: Lit(
                                                                                Num(
                                                                                    Num {
                                                                                        loc: SourceLocation {
                                                                                            start: Position {
                                                                                                line: 0,
                                                                                                column: 30,
                                                                                            },
                                                                                            end: Position {
                                                                                                line: 0,
                                                                                                column: 32,
                                                                                            },
                                                                                        },
                                                                                        span: 30..32,
                                                                                        value: "10",
                                                                                    },
                                                                                ),
                                                                            ),
                                                                            inferred_type: None,
                                                                        },
                                                                    },
                                                                ),
                                                                inferred_type: None,
                                                            },
                                                        ),
                                                    },
                                                ],
                                            },
                                        ),
                                        is_async: true,
                                        return_type: None,
                                        type_params: None,
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
            },
        ],
    },
)
